--- a/content/posts/艺术｜.md
+++ b/content/posts/艺术｜.md
@@ -37,7 +37,7 @@ seo:
 # See details front matter: /theme-documentation-content/#front-matter
 ---
 
-> 21年暑假参加 pku 暑期课程文艺复兴艺术史的选题小论文，最后综合评定拿了 91, 虽然写作过程极其抓耳挠腮，但丰富了自我认知以及触及到一片新领域，非常开心！
+> 之前暑假参加 pku 暑期课程文艺复兴艺术史的选题小论文，最后综合评定拿了 91, 虽然写作过程极其抓耳挠腮，但丰富了自我认知以及触及到一片新领域，非常开心！
 
 {{<md>}}
 <div align="center"; font-weight:700;>贝亚特丽切·倩契的再现：圭多·雷尼与茱莉亚·玛格丽特·卡梅隆</div>
