--- a/content/posts/艺术｜.md
+++ b/content/posts/艺术｜.md
@@ -37,6 +37,10 @@ seo:
 # See details front matter: /theme-documentation-content/#front-matter
 ---
 
+把之前在 pku 写的选题小论文课程作业也整合记录在博客上了，想象还是一段不错的回忆
+
+<!--more-->
+
 > 之前参加 pku 文艺复兴艺术史课程的选题小论文，最后综合评定拿了 91, 虽然写作过程极其抓耳挠腮，但丰富了自我认知以及触及到一片新领域，非常开心！
 
 {{<md>}}
