--- a/content/posts/艺术｜.md
+++ b/content/posts/艺术｜.md
@@ -37,7 +37,7 @@ seo:
 # See details front matter: /theme-documentation-content/#front-matter
 ---
 
-把之前在 pku 写的选题小论文课程作业也整合记录在博客上了，想象还是一段不错的回忆
+把之前在 pku 写的选题小论文课程作业也整合记录在博客上了，想想还是一段不错的回忆
 
 <!--more-->
 
