--- a/content/posts/艺术｜.md
+++ b/content/posts/艺术｜.md
@@ -5,7 +5,7 @@ date: 2022-03-01T10:54:15+08:00
 draft: false
 author: ""
 authorLink: ""
-description: ""
+description: "把之前在 pku 写的选题小论文课程作业也整合记录在博客上了，想想还是一段不错的回忆"
 keywords: ""
 license: ""
 comment: false
@@ -36,8 +36,6 @@ seo:
 
 # See details front matter: /theme-documentation-content/#front-matter
 ---
-
-把之前在 pku 写的选题小论文课程作业也整合记录在博客上了，想想还是一段不错的回忆
 
 <!--more-->
 
