--- a/content/posts/艺术｜.md
+++ b/content/posts/艺术｜.md
@@ -12,19 +12,19 @@ comment: false
 weight: 0
 
 tags:
-- 文艺复兴论文
+  - 艺术相关
 categories:
-- 艺术｜音乐｜社科
+  - 艺术｜音乐｜社科｜杂记
 
 hiddenFromHomePage: false
 hiddenFromSearch: false
 
 summary: ""
 resources:
-- name: featured-image
-  src: featured-image.jpg
-- name: featured-image-preview
-  src: featured-image-preview.jpg
+  - name: featured-image
+    src: featured-image.jpg
+  - name: featured-image-preview
+    src: featured-image-preview.jpg
 
 toc:
   enable: true
@@ -33,7 +33,6 @@ math:
 lightgallery: false
 seo:
   images: []
-
 # See details front matter: /theme-documentation-content/#front-matter
 ---
 
@@ -42,6 +41,7 @@ seo:
 > 之前参加 pku 文艺复兴艺术史课程的选题小论文，最后综合评定拿了 91, 虽然写作过程极其抓耳挠腮，但丰富了自我认知以及触及到一片新领域，非常开心！
 
 {{<md>}}
+
 <div align="center"; font-weight:700;>贝亚特丽切·倩契的再现：圭多·雷尼与茱莉亚·玛格丽特·卡梅隆</div>
 {{</md>}}
 
@@ -55,7 +55,7 @@ seo:
 
 **1.双重身份的隐现**
 
-1599年在意大利圣天使堡前对倩契一家的折磨与断头处刑，使得贝亚特丽切·倩契那充满悲剧性与传奇性色彩的谋杀故事得以流传并激发了无数艺术家对其形象与生平的再现与描述。现被认为是圭多·雷尼所绘的这幅画作，最早发现于1783年罗马科隆纳家族的画作收藏目录中，画作旁附言“肖像，据说是倩契家的女孩，艺术家未知” ( Polláková, 2011 )。 可见这幅画作除却所拥有的历史与社会意义，画作本身的绘者也是悬而不决，由于缺乏任何可追溯的原始材料，艺术史学家通过画作中的女孩形象与圭多·雷尼相互联系与推断。
+1599 年在意大利圣天使堡前对倩契一家的折磨与断头处刑，使得贝亚特丽切·倩契那充满悲剧性与传奇性色彩的谋杀故事得以流传并激发了无数艺术家对其形象与生平的再现与描述。现被认为是圭多·雷尼所绘的这幅画作，最早发现于 1783 年罗马科隆纳家族的画作收藏目录中，画作旁附言“肖像，据说是倩契家的女孩，艺术家未知” ( Polláková, 2011 )。 可见这幅画作除却所拥有的历史与社会意义，画作本身的绘者也是悬而不决，由于缺乏任何可追溯的原始材料，艺术史学家通过画作中的女孩形象与圭多·雷尼相互联系与推断。
 
 贝亚特丽切·倩契的经典形象便是画中这位穿着浅白色长裙，头围白色布条头巾的年轻女子。画家雷尼是博洛尼亚人也是博洛尼亚画派的代表人物，而头戴头巾的女性形象在博洛尼亚画派的画家里是常用的特征类型。在雷尼早期的画作《圣塞西莉亚》中，就可见他并没有采用先前的图像传统而是采用了头巾式头饰的图案 ( Pepper & Reni, 1984) 。
 
@@ -63,17 +63,17 @@ seo:
 
 反观茱莉亚·玛格丽特·卡梅隆，其作品的重要分支之一便是描绘女性半身像的摄影作品，她们往往身着时代服装，装扮成各种历史或文学人物。她的贝亚特丽切·倩契作品基于雷尼的那幅肖像画与倩契生平的故事传奇，属于后世同一主题两大流向中的其中一种，即对画中女孩面目状态的再现与情感流露的捕捉 ( Polláková, P, 2011 )。她利用摄影技术中的特写镜头强调突出了倩契的经典形象，并特意使用短焦距和长曝光使模特的呼吸或轻微的身体运动被记录在胶片上，进一步增加了图像的扩散性，看上去既朦朦胧胧又呼之欲出，充满生命力。
 
-她用了两位模特并且在五年内至少创作了五幅倩契形象的作品，说明卡梅隆一直在关注着这个悲剧性的故事。像当时的大多数艺术家一样，贝亚特丽切·倩契用宽布条包裹的长发这一形象主题，以及她眼神中独特的忧郁感被卡梅隆所强调。而在2018年，一张白板银照被发现隐藏于这张倩契的作品中，后经证实这张照片属于卡梅隆在1866年拍摄的相片，由同一女性模特扮演的男性圣徒相片 ( Kennedy et al, 2018 )。相对于雷尼的贝亚特丽切·倩契，卡梅隆的倩契也以不同的方式同时显现出两种身份的重合
+她用了两位模特并且在五年内至少创作了五幅倩契形象的作品，说明卡梅隆一直在关注着这个悲剧性的故事。像当时的大多数艺术家一样，贝亚特丽切·倩契用宽布条包裹的长发这一形象主题，以及她眼神中独特的忧郁感被卡梅隆所强调。而在 2018 年，一张白板银照被发现隐藏于这张倩契的作品中，后经证实这张照片属于卡梅隆在 1866 年拍摄的相片，由同一女性模特扮演的男性圣徒相片 ( Kennedy et al, 2018 )。相对于雷尼的贝亚特丽切·倩契，卡梅隆的倩契也以不同的方式同时显现出两种身份的重合
 
  <br>
 
 **2.“边缘”的自我**
 
- “每个画家都画自己”，这句话最早记载于文艺复兴早期，此后一直被艺术家提及，米开朗基罗和莱奥纳多都使用过这句话，毕加索也是如此。倩契的画像，即便很大程度上承担了其形象与故事的流传，它也负载着艺术家应对现实世界的复杂心理需求与行为实践。他的作品是这些需求与实践的产物，也是塑造这些需求和实践的重要组成部分 ( Spear & Reni, 1997 ) 。 
+“每个画家都画自己”，这句话最早记载于文艺复兴早期，此后一直被艺术家提及，米开朗基罗和莱奥纳多都使用过这句话，毕加索也是如此。倩契的画像，即便很大程度上承担了其形象与故事的流传，它也负载着艺术家应对现实世界的复杂心理需求与行为实践。他的作品是这些需求与实践的产物，也是塑造这些需求和实践的重要组成部分 ( Spear & Reni, 1997 ) 。
 
-雷尼一直和他的母亲住在一起，直到她去世，那时他55岁，从此雷尼拒绝让任何女性住在他的房子里，也避免让女性的衣裙触碰到他的衣服，甚至面对女模特，他的表现也被描述为像“大理石”一般不可通融。但他的举止又十分的细腻温和，非常容易脸红，极易让他落入一个先入为主的观念，即女性化的男性同性恋。斯皮尔认为雷尼害怕触摸任何人的身体，无论是男性或是女性，他的性心理构成同时是“天使般”的与被动的。
+雷尼一直和他的母亲住在一起，直到她去世，那时他 55 岁，从此雷尼拒绝让任何女性住在他的房子里，也避免让女性的衣裙触碰到他的衣服，甚至面对女模特，他的表现也被描述为像“大理石”一般不可通融。但他的举止又十分的细腻温和，非常容易脸红，极易让他落入一个先入为主的观念，即女性化的男性同性恋。斯皮尔认为雷尼害怕触摸任何人的身体，无论是男性或是女性，他的性心理构成同时是“天使般”的与被动的。
 
-正如文艺复兴时期的男性肖像画并不依赖于一种固定的、自足的本质的身份概念，而是在一定语境下采用了一种多重自我的框架，并暗示了性倾向的多层次性不是不言自明的 ( Simons, 1997 )。相对于男性肖像一般以直接的与公开的方式传达实质性的地位与公共角色，女性肖像多为展现出一种抽象性与寓言感的结合 ( West, 2004 )，以至雷尼的倩契更像是将殉道者的形象与女巫般的事迹结合汇流，她在既定的悲怆感中升起了隐约的美德与神性，两者相互纠缠与汇合，成为了雷尼那复杂而相对的心理流动的隐现。正如雷尼决定在圣米歇尔教堂的壁画中，将自己化身为戴着头巾提着一篮鸡蛋的女子，我们甚至可以感受到他的边缘性，一种晦明晦暗之态。 
+正如文艺复兴时期的男性肖像画并不依赖于一种固定的、自足的本质的身份概念，而是在一定语境下采用了一种多重自我的框架，并暗示了性倾向的多层次性不是不言自明的 ( Simons, 1997 )。相对于男性肖像一般以直接的与公开的方式传达实质性的地位与公共角色，女性肖像多为展现出一种抽象性与寓言感的结合 ( West, 2004 )，以至雷尼的倩契更像是将殉道者的形象与女巫般的事迹结合汇流，她在既定的悲怆感中升起了隐约的美德与神性，两者相互纠缠与汇合，成为了雷尼那复杂而相对的心理流动的隐现。正如雷尼决定在圣米歇尔教堂的壁画中，将自己化身为戴着头巾提着一篮鸡蛋的女子，我们甚至可以感受到他的边缘性，一种晦明晦暗之态。
 
 卡梅隆更是以新的方式再现了倩契的经典形象。她使用了摄影来创造图像，与绘画不同，摄影图像在于主体本身。它摆脱了时间与空间的束缚，使观看者能够臆想出对象被捕捉的那一刻。虽然绘画可能会随着时间的推移而变形，变得模糊或褪色，照片的持续时间相对较长，但值得注意的是，“摄影并不像艺术那样创造永恒；它美化了时间，只是把它从适当的腐败中解救出来”（Bazin 2004 ）。摄影也可以超越或有别于绘画的创造能力：画家有他或她自己的微观世界，与周围的世界保持一定的距离；摄影则与对象共享一个共同的平面，照片不是作为一个单纯的替代品，而是增强了自然形象的创造。
 
@@ -87,48 +87,22 @@ seo:
 
 **参考文献：**
 
- 
+Bazin, A. (2004). _The ontology of the photographic image_ (pp. 9-16). University of California Press.
 
-Bazin, A. (2004). *The ontology of the photographic image* (pp. 9-16). University of California Press.
+Brusius, M. (2010). Impreciseness in Julia Margaret Cameron's Portrait Photographs. _History of Photography_, _34_(4), 342-355.
 
- 
+Kennedy, N. W., Smieska, L., Centeno, S. A., & Molina, M. R. (2018). A Hidden Photograph by Julia Margaret Cameron. _Metropolitan Museum Journal_, _53_(1), 162-171.
 
-Brusius, M. (2010). Impreciseness in Julia Margaret Cameron's Portrait Photographs. *History of Photography*, *34*(4), 342-355.
+Polláková, P. (2011). The Case of Beatrice Cenci From Guido Reni to David Lynch. _Umeni/Art_, _59_(5).
 
- 
+Simons, P. (1997). Homosociality and erotics in Italian Renaissance portraiture. _Portraiture: Facing the subject_.
 
-Kennedy, N. W., Smieska, L., Centeno, S. A., & Molina, M. R. (2018). A Hidden Photograph by Julia Margaret Cameron. *Metropolitan Museum Journal*, *53*(1), 162-171. 
-
- 
-
-Polláková, P. (2011). The Case of Beatrice Cenci From Guido Reni to David Lynch. *Umeni/Art*, *59*(5).  
-
- 
-
-Simons, P. (1997). Homosociality and erotics in Italian Renaissance portraiture. *Portraiture: Facing the subject*. 
-
- 
-
-Smith, G., & Weaver, M. (2003). A letter by Julia Margaret Cameron. *History of photography*, *27*(1), 66-71.
-
- 
+Smith, G., & Weaver, M. (2003). A letter by Julia Margaret Cameron. _History of photography_, _27_(1), 66-71.
 
 Spear, R. E., & Reni, G. (1997). T*he" Divine" Guido: religion, sex, money, and art in the world of Guido Reni.* Yale University Press.
 
- 
+Stephen D. Pepper, Guido Reni. _A Complete Catalogue of his Works with an Introductory Text_, Oxford 1984, p. 23.
 
-Stephen D. Pepper, Guido Reni. *A Complete Catalogue of his Works with an Introductory Text*, Oxford 1984, p. 23. 
+West, S. (2004). _Portraiture_. Oxford University Press.
 
- 
-
-West, S. (2004). *Portraiture*. Oxford University Press.
-
- 
-
-Wolf, S., Cameron, J. M., Lipscomb, S., Mancoff, D. N., & Rose, P. (1998). *Julia Margaret Cameron's Women*. Yale University Press.
-
- 
-
- 
-
- 
+Wolf, S., Cameron, J. M., Lipscomb, S., Mancoff, D. N., & Rose, P. (1998). _Julia Margaret Cameron's Women_. Yale University Press.
